# mechanicd

./: CMakeLists.txt  README
aux/: CMakeLists.txt
aux/dbus/: org.halium.mechanicd.conf  org.halium.mechanicd.service
aux/systemd/: mechanicd.service
aux/upstart/: mechanicd.conf
debian/: changelog  control  copyright  rules
src/: CMakeLists.txt  main.cpp
src/dbus/: scheduling.cpp  scheduling.h  wifimodeswitch.cpp  wifimodeswitch.h
src/listeners/: power.cpp  power.h  service.cpp  service.h  session.cpp  session.h
src/listeners/power/: interface.h
src/listeners/service/: interface.h  upstart.cpp  upstart.h
src/listeners/session/: interface.h  logind.cpp  logind.h
src/tuners/: renderthread.cpp  renderthread.h  schedtune.cpp  schedtune.h
